--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <div class="section-headline text-center">
-            <h2>Our Portfolio</h2>
+            <h2>Portfolyo</h2>
           </div>
         </div>
       </div>
@@ -902,16 +902,16 @@
             <div class="awesome-menu ">
               <ul class="project-menu">
                 <li>
-                  <a href="#" class="active" data-filter="*">All</a>
+                  <a href="#" class="active" data-filter="*">Hepsi</a>
                 </li>
                 <li>
-                  <a href="#" data-filter=".development">Development</a>
+                  <a href="#" data-filter=".pasaport">Pasaport</a>
                 </li>
                 <li>
-                  <a href="#" data-filter=".design">Design</a>
+                  <a href="#" data-filter=".vize">Vize</a>
                 </li>
                 <li>
-                  <a href="#" data-filter=".photo">Photoshop</a>
+                  <a href="#" data-filter=".schengen">schengen</a>
                 </li>
               </ul>
             </div>
@@ -919,13 +919,13 @@
         </div>
         <div class="awesome-project-content">
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 design development">
+          <div class="col-md-4 col-sm-4 col-xs-12 pasaport">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="img/portfolio/1.jpg" alt="" /></a>
+                <a href="#"><img src="img/portfolio/p1.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="img/portfolio/1.jpg">
+                    <a class="venobox" data-gall="myGallery" href="img/portfolio/p1.jpg">
                       <h4>Business City</h4>
                       <span>Web Development</span>
                     </a>
@@ -936,13 +936,13 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 photo">
+          <div class="col-md-4 col-sm-4 col-xs-12 pasaport">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="img/portfolio/2.jpg" alt="" /></a>
+                <a href="#"><img src="img/portfolio/p2.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="img/portfolio/2.jpg">
+                    <a class="venobox" data-gall="myGallery" href="img/portfolio/p2.jpg">
                       <h4>Blue Sea</h4>
                       <span>Photosho</span>
                     </a>
@@ -953,13 +953,13 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 design">
+          <div class="col-md-4 col-sm-4 col-xs-12 schengen pasaport">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="img/portfolio/3.jpg" alt="" /></a>
+                <a href="#"><img src="img/portfolio/p3.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="img/portfolio/3.jpg">
+                    <a class="venobox" data-gall="myGallery" href="img/portfolio/p3.jpg">
                       <h4>Beautiful Nature</h4>
                       <span>Web Design</span>
                     </a>
@@ -970,13 +970,13 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 photo development">
+          <div class="col-md-4 col-sm-4 col-xs-12 schengen vize">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="img/portfolio/4.jpg" alt="" /></a>
+                <a href="#"><img src="img/portfolio/p4.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="img/portfolio/4.jpg">
+                    <a class="venobox" data-gall="myGallery" href="img/portfolio/p4.jpg">
                       <h4>Creative Team</h4>
                       <span>Web design</span>
                     </a>
@@ -987,13 +987,13 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 development">
+          <div class="col-md-4 col-sm-4 col-xs-12 schengen">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="img/portfolio/5.jpg" alt="" /></a>
+                <a href="#"><img src="img/portfolio/p5.jpg" alt="" /></a>
                 <div class="add-actions text-center text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="img/portfolio/5.jpg">
+                    <a class="venobox" data-gall="myGallery" href="img/portfolio/p5.jpg">
                       <h4>Beautiful Flower</h4>
                       <span>Web Development</span>
                     </a>
@@ -1004,13 +1004,13 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 design photo">
+          <div class="col-md-4 col-sm-4 col-xs-12 schengen vize">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="img/portfolio/6.jpg" alt="" /></a>
+                <a href="#"><img src="img/portfolio/p6.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="img/portfolio/6.jpg">
+                    <a class="venobox" data-gall="myGallery" href="img/portfolio/p6.jpg">
                       <h4>Night Hill</h4>
                       <span>Photoshop</span>
                     </a>
