--- a/index.html
+++ b/index.html
@@ -222,38 +222,38 @@
               <div class="testi-overly"></div>
             <!-- Start testimonials Start -->
               <div class="testimonial-content text-center">
-                <a class="quate" href="#"><i class="fa fa-quote-right"></i></a>
                 <!-- start testimonial carousel -->
                 <div class="testimonial-carousel">
                   <div class="single-testi">
                     <div class="testi-text">
-                      <h6>Duyuru 1 </h6>
+                      <h6>Bulgaristan Konsolosluğu C Vize Başvurularında Yeni Dönem</h6>
                       <p>
                         <br>
-                        Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru
+                        Bulgaristan Başkonsolosluğu C vize başvuruları için önemli bir açıklamada bulundu. 16 Mart 2020 tarihinden itibaren geçerli olmak üzere Bulgaristan C vize başvurularının yalnızca konsolosluğa akredite acenteler ile yapılabileceğini duyurdu. 
                       </p>
-                      <h6>Türkiye</h6>
                     </div>
                   </div>
                   <!-- End single item -->
                   <div class="single-testi">
                     <div class="testi-text">
-                      <h6>Duyuru 1 </h6>
+                      <h6>20 Ocak 2020'den sonra Rusya vize başvuru sahibi şahsen gelecek! </h6>
                       <p>
-                        Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru 
+                        Rusya vize başvuru sahiplerinin dikkatine! Rusya Dışişleri Bakanlığı’ndan Türkiye Cumhuriyeti vatandaşlarının Rusya vizesi başvurularına dair önemli bir açıklama geldi. Rusya Dışişleri Bakanlığı’ndan ve Rusya vizesi yetkili servis sağlayıcısından gelen güncel tarihli talimata göre ;
+20.01.2020 Pazartesi gününden itibaren;
+Başvuru sahiplerinin Rusya vize başvurularında şahsen bulunması gerekecek.
+Rusya vizesi için gerekli anket ve formlar imzasız olup gişede başvuran tarafından şahsen imzalanacak.
+Rusya vize başvurularında e-faturaya geçiş yapıldığı için faturalar e-posta olarak başvurana iletilecek.
                       </p>
-                      <h6>Jhon</h6>
                     </div>
                   </div>
                   <!-- End single item -->
                   <div class="single-testi">
                     <div class="testi-text">
-                      <h6>Duyuru 1 </h6>
+                      <h6>Dışişleri Bakanlığı’ndan Yeşil ve Gri Pasaport Açıklaması </h6>
                       <p>
                         <br>
-                        Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru -- Duyuru 
+                        Dışişleri Bakanlığı, 9 Aralık 2019 tarihinde gündeme gelen yeşil ve gri pasaporta sahip vatandaşların Avrupa ülkelerine seyahat ederken ETIAS (Avrupa Seyahat Bilgi ve Yetkilendirme Sistemi) üzerinden onay belgesi alacağına ilişkin haberlere dair açıklama yaptı. Dışişleri Bakanlığı sözcüsü Hami Aksoy, Yeşil (Hususi) ve Gri (Hizmet) pasaportla Schengen bölgesine girişte ön onay haberlerinin doğru olmadığını duyurdu.Yeşil ve Gri Pasaport sahiplerinin basında duyurulduğu gibi 2020 ve 2021 yıllarında Schengen alanına girişte Avrupa Seyahat Bilgi ve Yetkilendirme Sistemi'nden onay almaları gerekmeyecek.
                       </p>
-                      <h6>Fleming</h6>
                     </div>
                   </div>
                   <!-- End single item -->
@@ -926,8 +926,8 @@
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="img/portfolio/p1.jpg">
-                      <h4>Business City</h4>
-                      <span>Web Development</span>
+                      <h4>Bordo - Umuma Mahsus Pasaport</h4>
+                      <span>Pasaport</span>
                     </a>
                   </div>
                 </div>
@@ -943,8 +943,8 @@
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="img/portfolio/p2.jpg">
-                      <h4>Blue Sea</h4>
-                      <span>Photosho</span>
+                      <h4>Gri - Hizmet Pasaport</h4>
+                      <span>Pasaport</span>
                     </a>
                   </div>
                 </div>
@@ -953,15 +953,15 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 schengen pasaport">
+          <div class="col-md-4 col-sm-4 col-xs-12 pasaport schengen">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="img/portfolio/p3.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="img/portfolio/p3.jpg">
-                      <h4>Beautiful Nature</h4>
-                      <span>Web Design</span>
+                      <h4>Schengen Vizesi</h4>
+                      <span>Schengen</span>
                     </a>
                   </div>
                 </div>
@@ -977,8 +977,8 @@
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="img/portfolio/p4.jpg">
-                      <h4>Creative Team</h4>
-                      <span>Web design</span>
+                      <h4>Ticari Pasaport</h4>
+                      <span>pasaport</span>
                     </a>
                   </div>
                 </div>
@@ -994,8 +994,8 @@
                 <div class="add-actions text-center text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="img/portfolio/p5.jpg">
-                      <h4>Beautiful Flower</h4>
-                      <span>Web Development</span>
+                      <h4>Vize</h4>
+                      <span>Vize</span>
                     </a>
                   </div>
                 </div>
@@ -1004,15 +1004,15 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 schengen vize">
+          <div class="col-md-4 col-sm-4 col-xs-12 vize pasaport">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="img/portfolio/p6.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="img/portfolio/p6.jpg">
-                      <h4>Night Hill</h4>
-                      <span>Photoshop</span>
+                      <h4>Vize</h4>
+                      <span>Vize</span>
                     </a>
                   </div>
                 </div>
